# takeoff-mailer

./: Cargo.toml  README.md  build.rs  dockerfile  takeoff-infra.yml
.github/workflow/: prod-deploy.yml
.github/workflows/: dev-deploy.yml  prod-deploy.yml
proto/: email.proto
src/: config.rs  dlx.rs  mail.rs  main.rs
src/template/: mod.rs  registration_successful.html  registration_successful.rs
src/util/: date_and_time.rs  mod.rs
