[package]
name = "takeoff-mailer"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
prost-types = "0.14.3"
dotenvy = "0.15.7"
tera = "1.20.1"
chrono = "0.4.43"
lapin = { version = "2.3", default-features = false, features = [
    "rustls-webpki-roots-certs",
] }
lettre = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "smtp-transport",
    "builder",
    "hostname",
] }

[build-dependencies]
prost-build = "0.14.3"
